--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue_light">#A9CCE8</color>
-    <color name="blue_dark">#FF152B59</color>
+    <color name="blue_dark">#00457f</color>
     <color name="red">#B60A0A</color>
+    <color name="pink">#c22f72</color>
+    <color name="grey">#cacaca</color>
 
 
     <color name="colorAccent">#03DAC5</color>
