--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/blue_dark"
-                app:subtitleTextColor="#0A0A0A"
-                app:titleTextColor="#111111" />
+                app:subtitleTextColor="@color/white"
+                app:title="Главная"
+                app:titleMargin="12dp"
+                app:titleTextColor="@color/white" />
 
             <LinearLayout
                 android:orientation="vertical"
@@ -38,9 +40,10 @@
                     android:id="@+id/addButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/blue_light"
+                    android:backgroundTint="#FF77DD"
                     android:drawableLeft="@drawable/ic_bookmark_added_black_24dp"
                     android:onClick="showLoginActivity"
+
                     android:text="@string/addButton"
                     android:textSize="22sp" />
 
@@ -50,7 +53,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:backgroundTint="@color/blue_light"
+                    android:backgroundTint="#CEFF77DD"
                     android:drawableLeft="@drawable/ic_geography"
                     android:gravity="center"
                     android:onClick="showFindStudioActivity"
@@ -62,7 +65,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:backgroundTint="@color/blue_light"
+                    android:backgroundTint="@color/pink_light"
                     android:drawableLeft="@drawable/ic_calendar"
                     android:onClick="showFindEventActivity"
                     android:text="@string/findEventButton"
