--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="red">#B60A0A</color>
     <color name="pink">#c22f72</color>
     <color name="grey">#cacaca</color>
+    <color name="pink_light">#99FF77DD</color>
 
 
     <color name="colorAccent">#03DAC5</color>
