--- a/app/src/main/res/layout/activity_about_developer.xml
+++ b/app/src/main/res/layout/activity_about_developer.xml
@@ -23,9 +23,11 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/blue_light"
+                android:background="@color/blue_dark"
                 app:subtitleTextColor="#0A0A0A"
-                app:titleTextColor="#111111" />
+                app:title="О разработчике"
+                app:titleMargin="15dp"
+                app:titleTextColor="@color/white" />
 
 
 
@@ -34,9 +36,12 @@
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:text="Приложение ОДС разработано в рамках ВКР"
                 android:textSize="24sp"
                 android:paddingTop="80dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
                 />
 
         </LinearLayout>
