изменила дизайн на оранжувый-синий

--- a/app/src/debug/res/values/ic_launcher_logo_background.xml
+++ b/app/src/debug/res/values/ic_launcher_logo_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_logo_background">#0F046E</color>
+    <color name="ic_launcher_logo_background">#0C3F6E</color>
 </resources>
