--- a/app/src/main/res/layout/activity_message_add_event.xml
+++ b/app/src/main/res/layout/activity_message_add_event.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/blue_dark"
+                android:background="@color/orange"
                 app:subtitleTextColor="#0A0A0A"
                 app:title="ОргДвиж"
                 app:titleMargin="15dp"
@@ -48,9 +48,10 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="80dp"
                 android:layout_marginRight="20dp"
-                android:backgroundTint="@color/pink_light"
+                android:backgroundTint="@color/blue_dark"
                 android:drawableLeft="@drawable/ic_bookmark_added_black_24dp"
                 android:onClick="addNewButton"
+                android:textColor="@color/white"
                 android:text="Добавить новое мероприятие"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
