--- a/app/src/main/res/layout/activity_find_studio.xml
+++ b/app/src/main/res/layout/activity_find_studio.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/blue_dark"
+                android:background="@color/orange"
                 app:subtitleTextColor="#0A0A0A"
                 app:title="Найти студию"
                 app:titleMargin="15dp"
