--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/blue_dark"
+                android:background="@color/orange"
                 app:subtitleTextColor="#0A0A0A"
                 app:title="Авторизация"
                 app:titleMargin="15dp"
@@ -79,8 +79,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:backgroundTint="@color/pink_light"
+                    android:backgroundTint="@color/blue_dark"
                     android:onClick="click"
+                    android:textColor="@color/white"
                     android:text="@string/loginButton"
                     android:textSize="22sp" />
 
