добавила изменение дизайна на все активити

--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/blue_dark"
+                android:background="@color/orange"
                 app:subtitleTextColor="#0A0A0A"
                 app:title="Добавление мероприятия"
                 app:titleMargin="11dp"
@@ -116,8 +116,9 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="40dp"
-                android:backgroundTint="@color/pink_light"
+                android:backgroundTint="@color/blue_dark"
                 android:onClick="addEvent"
+                android:textColor="@color/white"
                 android:text="Добавить мероприятие"
                 android:textAlignment="center"
                 android:textAllCaps="true"
