--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="red">#B60A0A</color>
     <color name="pink">#c22f72</color>
     <color name="grey">#cacaca</color>
-    <color name="orange">#ff5000</color>
+    <color name="orange">#ABFF5000</color>
     <color name="pink_light">#99FF77DD</color>
     <color name="blue_button">#4C73E6</color>
     <color name="orange_top">#ffb58e</color>
