добавила маску для номера телефона (в БД запись в формате +7(ХХХ) ХХХ-ХХ-ХХ)

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,7 @@
                 android:layout_gravity="center"
                 android:fontFamily="sans-serif"
                 android:paddingTop="50dp"
-                android:text="Введите ваш номер телефона (12 сиволов)"
+                android:text="Введите ваш номер телефона (10 цифр)"
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="#031245"
@@ -48,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
                 android:layout_marginTop="20dp"
-                android:text=" Формат: +7 (9ХХ) ХХХ-ХХ-ХХ"
+                android:text=" Формат: +7 (XХХ) ХХХ-ХХ-ХХ"
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="#031245"
@@ -69,7 +69,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:autofillHints=""
-                    android:hint="+79XXXXXXXXX"
+                    android:hint="+7(XXX) XXX-XX-XX"
+                    android:maxLength="17"
                     android:textSize="24dp"
                     android:inputType="phone"
                     android:textColor="#01052C" />
